# agentrag-v1

./: .dockerignore  .env.example  .env.production.example  .flake8  .gitignore  .pre-commit-config.yaml  0.4.0  3.0.0  4.40.0  AGENTIC_RAG_ARCHITECTURE.md  ARCHITECTURE.md  BACKEND_ANALYSIS_PART1.md  BACKEND_ANALYSIS_PART2_IMPORT_MAP.md  BACKEND_ANALYSIS_PART3_ACTIONABLE_INSIGHTS.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  CONTRIBUTORS.md  DATABASE_ANALYSIS_AND_IMPROVEMENTS.md  DB_ALL_PRIORITIES_FINAL_SUMMARY.md  DB_CRITICAL_IMPROVEMENTS.md  DB_IMPROVEMENTS_COMPLETED.md  DB_PRIORITY_3_COMPLETED.md  DB_PRIORITY_4_5_COMPLETED.md  DB_분석_요약.md  DOCKER_DB_SCHEMA_CHECK.md  DOCKER_SETUP_COMPLETE.md  Dockerfile.mcp  FINAL_SUMMARY.txt  HWP_TABLE_CHART_GUIDE.md  LICENSE  QUICK_START_AFTER_FIXES.md  README.Docker.md  README.md  SECURITY.md  add_youtube_tool_simple.sql  analyze_react_improvements.py  apply-optimizations.bat  benchmark_reranker_performance.py  check-alembic.bat  (+96 more)
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
backend/: .coveragerc  .dockerignore  .env.example  .env.production.example  .env.test  2.0.0  BACKEND_IMPROVEMENTS.md  BACKEND_IMPROVEMENTS_FINAL.md  Dockerfile  Dockerfile.optimized  EMBEDDING_CONFIG_SYSTEM.md  EMBEDDING_MODELS.md  IMPROVEMENTS_COMPLETED.md  IMPROVEMENTS_COMPLETE_SUMMARY.md  IMPROVEMENTS_FINAL_SUMMARY.md  MIGRATION_GUIDE.md  PHASE1_IMPROVEMENTS.md  PHASE1_IMPROVEMENTS_COMPLETE.md  PHASE2_IMPROVEMENTS.md  PHASE2_IMPROVEMENTS_COMPLETE.md  PHASE2_IMPROVEMENTS_PLAN.md  PHASE2_IMPROVEMENTS_STARTED.md  PHASE3_IMPROVEMENTS.md  (+117 more)
(+2542 files in other folders)
